src/test/ui/by-move-pattern-binding.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/by-move-pattern-binding.rs:16:9
   |
LL |         &E::Bar(identifier) => f(identifier.clone())
   |         ^^^^^^^^----------^
   |         |       |
   |         |       hint: to prevent move, use `ref identifier` or `ref mut identifier`
   |         cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
